--- a/challenger 2/index.html
+++ b/challenger 2/index.html
@@ -11,7 +11,7 @@
     <main>
         <form action="" name="calculator">
             <input type="text" class="textmaincolor" name="text1" disabled>
-            <input type="button" class="textmaincolor" name="text12" value="c" onclick="location.reload()"><br>
+            <input type="button" class="nummaincolor" name="text12" value="c" onclick="location.reload()"><br>
 
             <input type="button" class="nummaincolor" name="btn9" value="9" onclick="display(btn9.value)">
             <input type="button" class="nummaincolor" name="btn8" value="8" onclick="display(btn8.value)">
